--- a/react-auth-frontend/package.json
+++ b/react-auth-frontend/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
+    "@types/react-test-renderer": "^17.0.1",
     "@types/redux-logger": "^3.0.8",
     "axios": "^0.21.1",
     "fontsource-roboto": "^4.0.0",
@@ -23,6 +24,7 @@
     "react-hook-form": "^6.15.5",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
+    "react-test-renderer": "^17.0.2",
     "redux-logger": "^3.0.6",
     "swr": "^0.5.4",
     "typescript": "^4.1.2",
