--- a/react-auth-backend/Cargo.toml
+++ b/react-auth-backend/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 actix-web = "3"
 actix-rt = "2.2.0"
+actix-cors = "0.5.4"
 jsonwebtoken = "7.2"
 serde_json = "1.0.64"
 serde = {version = "1.0", features = ["derive"]}
