--- a/react-auth-frontend/Dockerfile
+++ b/react-auth-frontend/Dockerfile
@@ -1,13 +1,17 @@
 FROM node:15.9.0-alpine3.10 as build
 ENV CI=true
 
+# Arguments
+ARG REACT_APP_BACKEND_ENDPOINT
+ENV REACT_APP_BACKEND_ENDPOINT=${REACT_APP_BACKEND_ENDPOINT}
+
 WORKDIR /app
 COPY . .
 RUN yarn
-RUN yarn run test
 RUN yarn build
 
 FROM nginx:latest as runner
+
 COPY --from=build /app/build /var/www
 COPY --from=build /app/nginx.conf /etc/nginx/nginx.conf
 
