--- a/react-auth-frontend/Dockerfile
+++ b/react-auth-frontend/Dockerfile
@@ -5,6 +5,9 @@ ENV CI=true
 ARG REACT_APP_BACKEND_ENDPOINT
 ENV REACT_APP_BACKEND_ENDPOINT=${REACT_APP_BACKEND_ENDPOINT}
 
+RUN touch /env.txt
+RUN printenv > /env.txt
+
 WORKDIR /app
 COPY . .
 RUN yarn
@@ -14,6 +17,7 @@ FROM nginx:latest as runner
 
 COPY --from=build /app/build /var/www
 COPY --from=build /app/nginx.conf /etc/nginx/nginx.conf
+COPY --from=build /env.txt /env.txt
 
 EXPOSE 80
 EXPOSE 443
