--- a/.github/workflows/docker-integration-tests.yml
+++ b/.github/workflows/docker-integration-tests.yml
@@ -13,7 +13,7 @@ env:
 jobs:
   # Run tests.
   # See also https://docs.docker.com/docker-hub/builds/automated-testing/
-  integration test:
+  test:
     runs-on: ubuntu-latest
 
     steps:
