--- a/react-auth-frontend/package.json
+++ b/react-auth-frontend/package.json
@@ -22,7 +22,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.15.5",
     "react-redux": "^7.2.3",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "react-test-renderer": "^17.0.2",
     "redux-logger": "^3.0.6",
     "swr": "^0.5.4",
